...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/editTextMinYear"
            android:layout_width="0dp"
            app:layout_constraintEnd_toStartOf="@id/editTextMaxYear"
            app:layout_constraintTop_toBottomOf="@id/textViewFilterHeader"
            android:imeOptions="actionNext"
            android:hint="@string/min_year"
            style="@style/FilterInputStyle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/fab_margin"
...
            style="@style/FilterInputStyle"
            app:layout_constraintStart_toEndOf="@id/editTextMinYear"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"/>

    <com.enesgemci.dubbizle.view.MButton
            android:id="@+id/buttonFilter"
            android:layout_width="0dp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/editTextMinYear"
            app:layout_constraintStart_toStartOf="parent"
...
